force-app/main/default/objects/LeanData__Round_Robin_Pool__c/LeanData__Round_Robin_Pool__c.object-meta.xml
<CustomObject>
    <label>Round Robin Pool</label>
    <nameField>
        <label>Round Robin Pool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Round Robin Pool</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>