force-app/main/default/objects/LeanData__Round_Robin_Pool__c/fields/LeanData__Capping_Type__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Capping_Type__c</fullName>
    <label>Capping Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>