force-app/main/default/objects/LeanData__Round_Robin_Pool__c/fields/LeanData__Holidays__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Holidays__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holiday Set</label>
    <referenceTo>LeanData__Round_Robin_Schedule_Setting__c</referenceTo>
    <relationshipLabel>Pool Holiday Set</relationshipLabel>
    <relationshipName>Pool_Holidays</relationshipName>
    <type>Lookup</type>
</CustomField>