force-app/main/default/objects/LeanData__Round_Robin_Pool__c/fields/LeanData__Last_Saved_By__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Last_Saved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Saved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Pool Last Saved By</relationshipLabel>
    <relationshipName>Pool_Last_Saved_By</relationshipName>
    <type>Lookup</type>
</CustomField>