force-app/main/default/objects/LeanData__Round_Robin_Pool__c/fields/LeanData__Respect_Vacation_Schedule__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Respect_Vacation_Schedule__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Respect Vacation Schedule</label>
    <type>Checkbox</type>
</CustomField>